--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start:prod": "node dist/server.js",
     "lint": "eslint src --ext .ts .",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "build": "tsc",
@@ -29,6 +31,7 @@
     "eslint-config-prettier": "^10.1.5",
     "globals": "^16.1.0",
     "prettier": "^3.5.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
   }
